--- a/src/LarpManager/Views/admin/personnage/removeLignee.twig
+++ b/src/LarpManager/Views/admin/personnage/removeLignee.twig
@@ -16,7 +16,7 @@
 			<fieldset>
 				<legend>Retrait d'une lignée</legend>
 				{% form_theme form 'Form/bootstrap_3_layout.html.twig' %}
-				Attention, vous vous appretez à retirer la lignée issue de <b>{{ personnageLignee.parent1.publicName }}</b> du personnage {{ personnage.publicName }}.
+				Attention, vous vous appretez à retirer la lignée du personnage {{ personnage.publicName }}.
 				{{ form(form) }}
 			</fieldset>
 		</form>
