--- a/src/LarpManager/Views/admin/personnage/updateLignee.twig
+++ b/src/LarpManager/Views/admin/personnage/updateLignee.twig
@@ -7,14 +7,14 @@
 	<ol class="breadcrumb">
 		<li><a href="{{ path('homepage') }}">Accueil</a></li>
 		<li><a href="{{ path('personnage.admin.list') }}">Liste des personnages</a></li>
-		<li class="active">Modification de {{ personnage.publicName }}</li>
+		<li class="active">Modification de la lignée de {{ personnage.publicName }}</li>
 	</ol>
 
 	<div class="well bs-component">	
 		<form action="{{ path('personnage.admin.lignee.add', {'personnage': personnage.id}) }}" method="POST" {{ form_enctype(form) }}>
 			<fieldset>
 				<legend>Modification de {{ personnage.publicName }}</legend>
-				<p><strong>Ajouter une lignée</strong></p>
+				<p><strong>Ajouter une lignée ou une généalogie</strong></p>
 				{% form_theme form 'Form/bootstrap_3_layout.html.twig' %}
 	
 				{{ form(form) }}
