--- a/src/LarpManager/Views/menu.twig
+++ b/src/LarpManager/Views/menu.twig
@@ -82,7 +82,7 @@
 						<li><a href="{{ path('lieu') }}">Lieux</a></li>
 						<li><a href="{{ path('document') }}">Documents</a></li>
 						<li><a href="{{ path('items') }}">Objets</a></li>
-						<li><a href="{{ path('lignee.admin.list') }}">Lignées</a></li>
+						<li><a href="{{ path('lignee.list') }}">Lignées</a></li>
 					</ul>
 				</li>
 			{% endif %}
