--- a/src/LarpManager/Views/admin/lignee/addMembre.twig
+++ b/src/LarpManager/Views/admin/lignee/addMembre.twig
@@ -6,13 +6,13 @@
 
     <ol class="breadcrumb">
         <li><a href="{{ path('homepage') }}">Accueil</a></li>
-        <li><a href="{{ path("lignee.admin.list") }}">Liste des lignees</a></li>
-        <li><a href="{{ path('lignee.admin.details', {'lignee': lignee.id}) }}">{{ lignee.nom }}</a></li>
+        <li><a href="{{ path("lignee.list") }}">Liste des lignees</a></li>
+        <li><a href="{{ path('lignee.details', {'lignee': lignee.id}) }}">{{ lignee.nom }}</a></li>
         <li class="active">Ajouter un membre</li>
     </ol>
 
     <div class="well bs-component">
-        <form action="{{ path('lignee.admin.addMembre', {'lignee': lignee.id}) }}" method="POST" {{ form_enctype(form) }}>
+        <form action="{{ path('lignee.addMembre', {'lignee': lignee.id}) }}" method="POST" {{ form_enctype(form) }}>
             <fieldset>
                 <legend>{{ lignee.nom }} - Ajout d'un membre à la lignée (Attention ! Seuls les personnages sans lignée peuvent être ajoutés)</legend>
                 {% form_theme form 'Form/bootstrap_3_layout.html.twig' %}
