--- a/src/LarpManager/Views/public/personnage/fragment/lignee.twig
+++ b/src/LarpManager/Views/public/personnage/fragment/lignee.twig
@@ -1,20 +1,22 @@
 {# Lignée #}
-<div class="header">
-	<h5>Lignée</h5>
-</div>
+{% if personnage.personnageLignee|length > 0 %}
+	<div class="header">
+		<h5>Lignée</h5>
+	</div>
 
-<div class="list-group">
-	{% for lignage in personnage.personnageLignee %}
-		<li class="list-group-item">{{ lignage.lignee.nom }}</li>
-	{% endfor %}
-
-	{% if descendants|length > 0 %}
-		<li class="list-group-item">
-			<strong>Enfants :</strong>
-		</li>
-
-		{% for descendant in descendants %}
-			<li class="list-group-item">{{ descendant.personnage.nom }}</li>
+	<div class="list-group">
+		{% for lignage in personnage.personnageLignee %}
+			<li class="list-group-item">{{ lignage.lignee.nom }}</li>
 		{% endfor %}
-	{% endif %}
-</div>
+
+		{% if descendants|length > 0 %}
+			<li class="list-group-item">
+				<strong>Enfants :</strong>
+			</li>
+
+			{% for descendant in descendants %}
+				<li class="list-group-item">{{ descendant.personnage.nom }}</li>
+			{% endfor %}
+		{% endif %}
+	</div>
+{% endif %}
