--- a/src/LarpManager/Views/public/personnage/fragment/alchimie.twig
+++ b/src/LarpManager/Views/public/personnage/fragment/alchimie.twig
@@ -1,13 +1,14 @@
-{% if personnage.hasCompetence('Alchimie') %}
+{% if personnage.potions|length > 0 %}
 	<div class="header">
 		<h5>Alchimie</h5>
 	</div>
-		
+	{% if not personnage.hasCompetence('Alchimie') %}
+	<span style="color:red;">Vous n'avez pas les connaissances pour préparer ces potions et vous ne pouvez pas les recopier sans l'aide adéquate.</span>
+	{% endif %}		
 	<h6>Liste de vos potions</h6>
 	<div class="list-group">
 		{% for potion in personnage.potions %}
-			<a class="list-group-item" href="{{ path('participant.potion.detail', {'participant': participant.id, 'potion': potion.id}) }}">{{ potion.label }} - Niveau {{ potion.niveau }}</a>
+			<a class="list-group-item" href="{{ path('participant.potion.detail', {'participant': participant.id, 'potion': potion.id}) }}">{% if potion.secret %}<span style="color:red;">Secret</span> - {% endif %}{{ potion.label }} - Niveau {{ potion.niveau }}</a>
 		{% endfor %}
 	</div>
-	
 {% endif %}
