--- a/src/LarpManager/Views/homepage/menu.twig
+++ b/src/LarpManager/Views/homepage/menu.twig
@@ -92,7 +92,7 @@
 					<ul class="dropdown-menu">
 						<li><a href="{{ path('loi') }}">Lois</a></li>
 						<li><a href="{{ path('technologie') }}">Technologies</a></li>
-						<li><a href="{{ path('econnomie') }}">Economie</a></li>
+						<li><a href="{{ path('economie') }}">Economie</a></li>
 						<li><a href="{{ path('strategie') }}">Stratégie</a></li>
 						<li><a href="{{ path('groupe.diplomatie') }}">Diplomatie</a></li>
 						<li><a href="{{ path('groupe.quetes') }}">Quêtes commerciales</a></li>
