--- a/src/LarpManager/Views/admin/religion/detail.twig
+++ b/src/LarpManager/Views/admin/religion/detail.twig
@@ -14,11 +14,8 @@
 		
 		<div class="clearfix">
 			<h4>
-			{{ religion.label }}
+			{{ religion.label }}{% if religion.secret %}<br/><span style="color:red;">(<strong>SECRET</strong>)</span>{% endif %}
 			</h4>
-		
-		
-		
 			<div class="pull-right">
 				{% if religion.blason %}
 					<img width="160" src="{{ path('blason.get', {'blason' : religion.blason }) }}" /><br />
@@ -26,8 +23,6 @@
 				<small><a href="{{ path('religion.update.blason', {'religion': religion.id}) }}">Ajouter ou modifier le blason</a></small>
 			</div>
 		</div>
-		
-	
 		
   		<div class="list-group">
 		    		
@@ -78,7 +73,6 @@
     				{% endif %}
     			</p>
 	    	</div>
-	    	
 	    	
 	    	<div class="list-group-item">
 		    	<h4 class="list-group-item-heading">Description à destination des fanatiques</h4>
