Fix lignée vue joueur

--- a/src/LarpManager/Views/admin/personnage/detail.twig
+++ b/src/LarpManager/Views/admin/personnage/detail.twig
@@ -593,7 +593,7 @@
 											{% endif %}
 											</li>
 										{% else %}
-											<li>Ni PJ ou PNJ</li>
+											<li>Ni PJ, ni PNJ</li>
 										{% endif %}
 										</ul></li>
 									{% endfor %}
