--- a/src/LarpManager/Views/public/personnage/detail.twig
+++ b/src/LarpManager/Views/public/personnage/detail.twig
@@ -98,6 +98,7 @@
 					{% include 'public/personnage/fragment/magie.twig' with {'personnage': personnage, 'participant': participant} %}
 					{% include 'public/personnage/fragment/language.twig' with {'personnage': personnage, 'participant': participant} %}
 					{% include 'public/personnage/fragment/technologie.twig' with {'personnage': personnage, 'participant': participant} %}
+					{% include 'public/personnage/fragment/connaissance.twig' with {'personnage': personnage, 'participant': participant} %}
 					{% include 'public/personnage/fragment/item.twig' with {'personnage': personnage, 'participant': participant} %}
 					{% include 'public/personnage/fragment/politique.twig' with {'personnage': personnage, 'participant': participant, 'lois': lois} %}
 					{% include 'public/personnage/fragment/priere.twig' with {'personnage': personnage, 'participant': participant} %}
