--- a/src/LarpManager/Views/public/personnage/fragment/language.twig
+++ b/src/LarpManager/Views/public/personnage/fragment/language.twig
@@ -4,7 +4,7 @@
 </div>
 <ul class="list-group">
 	{% for personnageLangue in personnage.personnageLangues %}
-		<li class="list-group-item"><strong>{{ personnageLangue.langue }}</strong>&nbsp;<small>(obtenu grace à votre {{ personnageLangue.source }})</small><br />
+		<li class="list-group-item">{% if personnageLangue.langue.secret %}<span style="color:red;">Secret</span> - {% endif %}<strong>{{ personnageLangue.langue }}</strong>&nbsp;<small>(obtenu grace à votre {{ personnageLangue.source }})</small><br />
 		{{ personnageLangue.langue.description|markdown }}
 		{% if personnageLangue.langue.documentUrl %}
 		<a class="btn btn-default btn-sm" href="{{ path('participant.langue.document',{'participant': participant.id, 'langue' : personnageLangue.langue.id, 'filename': personnageLangue.langue.printlabel }) }}">
