--- a/src/LarpManager/Views/menu.twig
+++ b/src/LarpManager/Views/menu.twig
@@ -129,10 +129,11 @@
 						<li><a href="{{ path('construction') }}">Constructions</a></li>
 						<li><a href="{{ path('technologie') }}">Technologies</a></li>
 						<li><a href="{{ path('magie.domaine.list') }}">Domaine de magie</a></li>
-						<li><a href="{{ path('magie.sphere.list') }}">Sphères</a></li>
 						<li><a href="{{ path('magie.sort.list') }}">Sorts</a></li>
 						<li><a href="{{ path('magie.potion.list') }}">Potions</a></li>
+						<li><a href="{{ path('magie.sphere.list') }}">Sphères</a></li>
 						<li><a href="{{ path('magie.priere.list') }}">Prières</a></li>
+						<li><a href="{{ path('connaissance.list') }}">Connaissances</a></li>
 						<li><a href="{{ path('personnageSecondaire.list') }}">Personnage secondaire</a></li>
 					{% endif %}
 				</ul>
