Affichage du secret en rouge pour les Groupes secondaires

--- a/src/LarpManager/Views/admin/gn/printInter.twig
+++ b/src/LarpManager/Views/admin/gn/printInter.twig
@@ -129,7 +129,7 @@ table tr td {
 				</td>
 				<td>
 					{% for membre in personnage.membres %}
-						{{ membre.secondaryGroup }}<br />
+						{% if membre.secondaryGroup.secret %}<strong>Secret</strong> - {% endif %}{{ membre.secondaryGroup }}<br />
 					{% endfor %}
 					
 					{% for postulant in personnage.postulants %}
