--- a/src/LarpManager/Views/admin/intrigue/detail.twig
+++ b/src/LarpManager/Views/admin/intrigue/detail.twig
@@ -37,7 +37,7 @@
 				<div class="white-box">
 					<ul>
 					{% for intrigueHasGroupeSecondaire in intrigue.intrigueHasGroupeSecondaires %}
-						<li><a href="{{ path('groupeSecondaire.admin.detail', {'groupe': intrigueHasGroupeSecondaire.secondaryGroup.id}) }}">{{ intrigueHasGroupeSecondaire.secondaryGroup.label }}</a></li>
+						<li><a href="{{ path('groupeSecondaire.admin.detail', {'groupe': intrigueHasGroupeSecondaire.secondaryGroup.id}) }}">{% if intrigueHasGroupeSecondaire.secondaryGroup.secret %}<span style="color:red;">Secret</span> - {% endif %}{{ intrigueHasGroupeSecondaire.secondaryGroup.label }}</a></li>
 					{% else %}
 						<li>Aucun</li>
 					{% endfor %}
