--- a/src/LarpManager/Views/public/personnage/fragment/connaissance.twig
+++ b/src/LarpManager/Views/public/personnage/fragment/connaissance.twig
@@ -7,7 +7,7 @@
 			<div class="list-group">
 			{% for connaissance in personnage.connaissances %}
 				<div class="list-group-item">
-					{% if connaissance.secret %}<span style="color:red;">Secret</span> - {% endif %}<div class="list-group-item-heading"><strong>{{ connaissance.label }}</strong> - Niveau {{ connaissance.niveau }}</div>
+					<div class="list-group-item-heading">{% if connaissance.secret %}<span style="color:red;">Secret</span> - {% endif %}<strong>{{ connaissance.label }}</strong> - Niveau {{ connaissance.niveau }}</div>
 					<div class="list-group-item-text">{{ connaissance.description|markdown }}</div>
 				</div>
 				<p class="list-group-item-text">
