--- a/src/LarpManager/Views/admin/groupe/printPerso.twig
+++ b/src/LarpManager/Views/admin/groupe/printPerso.twig
@@ -96,7 +96,6 @@ table tr td {
 	</table>		
 	
 	<div style="border: 1px solid #000;padding: 5px;">
-	<h3><strong>Compétences</strong></h3>
 	{% for competence in personnage.competences %}
 		<strong>{{ competence.competenceFamily.label }}&nbsp({{ competence.level.label }})</strong> : {{ competence.descriptionRaw }}<br />
 	{% endfor %}
@@ -178,11 +177,28 @@ table tr td {
 					{% for priere in personnage.prieres %}
 						{{ priere.sphere.label }} - Niveau {{ priere.niveau }} ({{ priere.label }})<br />
 					{% endfor %}
+				</td>			
+			</tr>
+		</tbody>
+	</table>
+	{% if personnage.connaissances %}
+	<table>
+		<thead>
+			<tr>
+				<th>Connaissances</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr>
+				<td>
+					{% for connaissance in personnage.connaissances %}
+						{% if connaissance.secret %}<strong>Secret</strong> - {% endif %}{{ connaissance.label }} - Niveau {{ connaissance.niveau }}<br />
+					{% endfor %}
 				</td>
 			</tr>
 		</tbody>
 	</table>
-					
+	{% endif %}					
 	{% if participant.personnageSecondaire %}
 		<br />
 		<hr />
