--- a/src/LarpManager/Views/admin/personnage/print.twig
+++ b/src/LarpManager/Views/admin/personnage/print.twig
@@ -93,7 +93,6 @@ table tr td {
 	</table>		
 
 	<div style="border: 1px solid #000;padding: 5px;">
-	<h3><strong>Compétences</strong></h3>
 	{% for competence in personnage.competences %}
 		<strong>{{ competence.competenceFamily.label }}&nbsp({{ competence.level.label }})</strong> : {{ competence.descriptionRaw }}<br />
 	{% endfor %}
@@ -179,7 +178,26 @@ table tr td {
 			</tr>
 		</tbody>
 	</table>
-	
+
+	{% if personnage.connaissances %}
+	<table>
+		<thead>
+			<tr>
+				<th>Connaissances</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr>
+				<td>
+					{% for connaissance in personnage.connaissances %}
+						{% if connaissance.secret %}<strong>Secret</strong> - {% endif %}{{ connaissance.label }} - Niveau {{ connaissance.niveau }}<br />
+					{% endfor %}
+				</td>
+			</tr>
+		</tbody>
+	</table>
+	{% endif %}
+
 	{% if participant.personnageSecondaire %}
 		<br />
 		<hr />
